manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: a0008
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-deployment
        image: jobri237/ls-gitops:26
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2000
        resources:
          requests:
            cpu: 70m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: a0008
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
  - port: 2000
    targetPort: 2000
