manifests/audit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: dp-must-have-app
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment"]
  parameters:
    labels: ["app"]
status:
  auditTimestamp: "2023-08-06T01:46:13Z"
  byPod:
  - enforced: true
    id: gatekeeper-controller-manager-0
  violations:
  - enforcementAction: deny
    kind: Deployment
    message: 'you must provide labels: {"app"}'
    name: default
  - enforcementAction: deny
    kind: Deployment
    message: 'you must provide labels: {"app"}'
    name: gatekeeper-system
  - enforcementAction: deny
    kind: Deployment
    message: 'you must provide labels: {"app"}'
    name: kube-public
  - enforcementAction: deny
    kind: Deployment
    message: 'you must provide labels: {"app"}'
    name: kube-system
